# hw

./: .gitignore  ChangeLog.md  README.md  cabal.project  hw.cabal  shell.nix  stack.yaml
assets/ships/jaeger/: jaeger.blend  jaeger.mtl
assets/ships/marksman/: marksman.blend  marksman.mtl  marksman.texture.xcf
assets/spheres/: bigsphere.blend  bigsphere.mtl  smallsphere.blend  smallsphere.mtl  vertHandle.blend  vertHandle.mtl
design_notes/: Home.txt  Name.txt
examples/example00/: Init.hs  Main.hs  Types.hs  Util.hs
examples/example01/: Main.hs  Types.hs
examples/example02/: Init.hs  Main.hs  Types.hs  Util.hs
examples/example03/: Init.hs  Logging.hs  Main.hs  Types.hs  Util.hs
notes/: gamemodes.braindump  shipbuilding.braindump  techtree.braindump
src/: Init.hs  Main.hs  Types.hs  Util.hs
