cabal-version:      2.4
name:               hw
version:            0.0.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             nek0
maintainer:         nek0@chelnok.de
category:           Game
build-type:         Simple
extra-source-files: ChangeLog.md

common common
  build-depends:
    , affection     ^>=0.0.0.9
    , base          ^>=4.12
    , bytestring    ^>=0.10.8
    , GLUtil        ^>=0.10.3
    , linear        ^>=1.20.9
    , OpenGL        ^>=3.0.3
    , OpenGLRaw     ^>=3.3.4
    , random        ^>=1.1
    , sdl2          ^>=2.5
    , shoot
    , spatial-math  ^>=0.5
    , split         ^>=0.2.3
    , vector        ^>=0.12
    , wavefront     ^>=0.7

  default-extensions: OverloadedStrings
  ghc-options:        -Wall
  default-language:   Haskell2010

executable hw
  import:          common
  main-is:         Main.hs
  other-modules:
    Init
    Types
    Util

  hs-source-dirs:  src
  extra-libraries: stdc++

executable example00
  import:          common
  main-is:         Main.hs
  other-modules:
    Init
    Types
    Util

  hs-source-dirs:  examples/example00
  extra-libraries: stdc++

executable example01
  import:          common
  main-is:         Main.hs
  other-modules:
    Init
    Types
    Util

  hs-source-dirs:  examples/example01
  extra-libraries: stdc++

executable example02
  import:          common
  main-is:         Main.hs
  other-modules:
    Init
    Logging
    Types
    Util

  hs-source-dirs:  examples/example02
  extra-libraries: stdc++

executable example03
  import:          common
  main-is:         Main.hs
  other-modules:
    Init
    Logging
    Types
    Util

  build-depends:   optparse-applicative ^>=0.15
  hs-source-dirs:  examples/example03
  extra-libraries: stdc++
